// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@ast-decorators/transform-accessor @setter class-related transformations compiles for computed property 1`] = `
"const $bar = Symbol();

class Foo {
  #_$bar;

  set [$bar](value) {
    this.#_$bar = value;
  }

}"
`;

exports[`@ast-decorators/transform-accessor @setter class-related transformations compiles for existing setter 1`] = `
"class Foo {
  #bar = '10';

  set bar(value) {
    this.#bar = value;
  }

}"
`;

exports[`@ast-decorators/transform-accessor @setter class-related transformations compiles for private property 1`] = `
"class Foo {
  #_bar;

  set #bar(value) {
    this.#_bar = value;
  }

}"
`;

exports[`@ast-decorators/transform-accessor @setter class-related transformations compiles for property with assignment 1`] = `
"class Foo {
  #_bar = 'baz';

  set bar(value) {
    this.#_bar = value;
  }

}"
`;

exports[`@ast-decorators/transform-accessor @setter class-related transformations compiles for static property 1`] = `
"class Foo {
  static #_bar;

  static set bar(value) {
    this.#_bar = value;
  }

}"
`;

exports[`@ast-decorators/transform-accessor @setter class-related transformations compiles without interceptor 1`] = `
"class Foo {
  #_bar;

  set bar(value) {
    this.#_bar = value;
  }

}"
`;

exports[`@ast-decorators/transform-accessor @setter class-related transformations uses class name instead of this for static property 1`] = `
"class Foo {
  static #_bar;

  static set bar(value) {
    Foo.#_bar = value;
  }

}"
`;

exports[`@ast-decorators/transform-accessor @setter class-related transformations uses this for static property if class name is absent 1`] = `
"const Foo = class {
  static #_bar;

  static set bar(value) {
    this.#_bar = value;
  }

};"
`;

exports[`@ast-decorators/transform-accessor @setter content-related transformations compiles for multiple decorators 1`] = `
"import { set1, set2, set3 } from './sets';

class Foo {
  #_bar;

  set bar(value) {
    value = set3(value);
    value = set2(value);
    this.#_bar = set1(value);
  }

}"
`;

exports[`@ast-decorators/transform-accessor @setter content-related transformations moves the array destructuring of the value param to the method body 1`] = `
"import { set } from './set';

class Foo {
  #bar;

  set bar(_value) {
    _value = set(_value);
    const [foo] = _value;
    this.#bar = foo;
  }

}"
`;

exports[`@ast-decorators/transform-accessor @setter content-related transformations moves the object destructuring of the value param to the method body 1`] = `
"import { set } from './set';

class Foo {
  #bar;

  set bar(_value) {
    _value = set(_value);
    const {
      foo
    } = _value;
    this.#bar = foo;
  }

}"
`;

exports[`@ast-decorators/transform-accessor @setter interceptor-related transformations compiles for imported interceptor 1`] = `
"import { set } from './set';

class Foo {
  #_bar;

  set bar(value) {
    this.#_bar = set(value);
  }

}"
`;

exports[`@ast-decorators/transform-accessor @setter interceptor-related transformations compiles for imported namespace interceptor 1`] = `
"import * as setters from './set';

class Foo {
  #_bar;

  set bar(value) {
    this.#_bar = setters.set(value);
  }

}"
`;

exports[`@ast-decorators/transform-accessor @setter interceptor-related transformations compiles for the arrow function interceptor 1`] = `
"const _set = value => {
  console.log(value);
  return value;
};

class Foo {
  #_bar;

  set bar(value) {
    this.#_bar = _set(value);
  }

}"
`;

exports[`@ast-decorators/transform-accessor @setter interceptor-related transformations compiles for the regular function interceptor 1`] = `
"function _set(value) {
  console.log(value);
  return value;
}

class Foo {
  #_bar;

  set bar(value) {
    this.#_bar = _set(value);
  }

}"
`;
